add design day template to schedule

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -136,17 +136,18 @@
     <div class="content-lg">
       <h2 class="text-lg">Schedule</h2>
       <p class="schedule-tabs">
-        <a data-day="mobile-people-day" href="#mobile-people-day" class="btn first-day-btn rounded"><span
-          class="full-view">Mobile People Day</span>
-          <span class="abbr-view">9 Aug</span></a>
-        <!--        <a data-day="design-friday" href="#design-friday" class="btn first-day-btn rounded"><span class="full-view">Design Friday</span>-->
-        <!--          <span class="abbr-view">Des Fr</span></a>-->
-        <a data-day="js-sat" href="#js-sat" class="btn first-day-btn rounded"><span class="full-view">JS/Frontend</span>
-          <span class="abbr-view">10 Aug</span></a>
-        <a data-day="js-sun" href="#js-sun" class="btn second-day-btn rounded"><span
-          class="full-view">JS/Frontend</span>
+        <a data-day="mobile-people-day" href="#mobile-people-day" class="btn rounded"><span
+          class="full-view">Mobile People Day</span><span class="abbr-view">MBL</span>
+          <span class="stream-date">9 Aug</span></a>
+        <a data-day="design-friday" href="#design-friday" class="btn rounded"><span class="full-view">Design Friday</span>
+           <span class="abbr-view">DSGN</span> <span class="stream-date">9 Aug</span></a>
+        <a data-day="js-sat" href="#js-sat" class="btn rounded"><span class="full-view">JS/Frontend</span><span
+          class="abbr-view">JS/FE</span>
+          <span class="stream-date">10 Aug</span></a>
+        <a data-day="js-sun" href="#js-sun" class="btn rounded"><span
+          class="full-view">JS/Frontend</span><span class="abbr-view">JS/FE</span>
           <span
-            class="abbr-view">11 Aug</span></a>
+            class="stream-date">11 Aug</span></a>
       </p>
 
       <ul class="schedule mobile-people-day">
@@ -314,28 +315,40 @@
 
       </ul>
 
-      <!--      <ul class="schedule design-friday">-->
-      <!--        <li>-->
-      <!--          <h3><span class="schedule-time">9:00</span> Registration</h3>-->
-      <!--        </li>-->
-      <!--        <li>-->
-      <!--          <h3><span class="schedule-time">10:00</span> Opening. Welcome speech from conference-->
-      <!--            organizers-->
-      <!--          </h3>-->
-      <!--          <p class="text-sm">RS Crew</p>-->
-      <!--          <p class="text-sm">50min | RU-->
-      <!--            <span class="talk-place">Blue Stage</span>-->
-      <!--          </p>-->
-      <!--        </li>-->
-      <!--        <li>-->
-      <!--          <h3><span class="schedule-time">11:00</span><a href="speakers/kseniya-koltun.html">TBD</a>-->
-      <!--          </h3>-->
-      <!--          <p class="text-sm">Kseniya Koltun</p>-->
-      <!--          <p class="text-sm">30min | EN-->
-      <!--            <span class="talk-place">Blue Stage</span>-->
-      <!--          </p>-->
-      <!--        </li>-->
-      <!--      </ul>-->
+      <ul class="schedule design-friday">
+        <li>
+          <h3><span class="schedule-time">9:00</span> Registration</h3>
+        </li>
+        <li>
+          <h3><span class="schedule-time">10:00</span> Opening. Welcome speech from conference
+            organizers
+          </h3>
+          <p class="text-sm">RS Crew</p>
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">11:00</span><a href="speakers/kseniya-koltun.html">TBD</a>
+          </h3>
+          <p class="text-sm">Kseniya Koltun
+            <small>| FaceMetricsk</small>
+          </p>
+          <p class="text-sm">30min | EN
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        </li>
+<!--        <li>-->
+<!--          <h3><span class="schedule-time">12:00</span><a href="#">TBD</a>-->
+<!--          </h3>-->
+<!--          <p class="text-sm">Speaker TBD-->
+<!--            <small>| Company</small></p>-->
+<!--          <p class="text-sm">30min | EN-->
+<!--            <span class="talk-place">Red Stage</span>-->
+<!--          </p>-->
+<!--        </li>-->
+      </ul>
 
       <ul class="schedule first-day js-sat">
         <li>
