add: two speakers of design stream

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -139,8 +139,9 @@
         <a data-day="mobile-people-day" href="#mobile-people-day" class="btn rounded"><span
           class="full-view">Mobile People Day</span><span class="abbr-view">MBL</span>
           <span class="stream-date">9 Aug</span></a>
-        <a data-day="design-friday" href="#design-friday" class="btn rounded"><span class="full-view">Design Friday</span>
-           <span class="abbr-view">DSGN</span> <span class="stream-date">9 Aug</span></a>
+        <a data-day="design-friday" href="#design-friday" class="btn rounded"><span
+          class="full-view">Design Friday</span>
+          <span class="abbr-view">DSGN</span> <span class="stream-date">9 Aug</span></a>
         <a data-day="js-sat" href="#js-sat" class="btn rounded"><span class="full-view">JS/Frontend</span><span
           class="abbr-view">JS/FE</span>
           <span class="stream-date">10 Aug</span></a>
@@ -311,8 +312,6 @@
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
-
-
       </ul>
 
       <ul class="schedule design-friday">
@@ -323,31 +322,44 @@
           <h3><span class="schedule-time">10:00</span> Opening. Welcome speech from conference
             organizers
           </h3>
-          <p class="text-sm">RS Crew</p>
-          <p class="text-sm">50min | RU
+          <p class="text-sm">DesignSpot Crew</p>
+          <p class="text-sm">30min | RU
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
         <li>
-          <h3><span class="schedule-time">11:00</span><a href="speakers/kseniya-koltun.html">TBD</a>
+          <h3><span class="schedule-time">10:30</span><a href="speakers/kseniya-koltun.html">Продуктовая мобильная
+            разработка - не дизайном единым. (не) про дизайн, командную работу и справедливость</a>
           </h3>
           <p class="text-sm">Kseniya Koltun
             <small>| FaceMetricsk</small>
+          </p>
+          <p class="text-sm">30min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">11:00</span><a href="speakers/denis-trusilo.html">Видеопродакшен без
+            комплексов: Почему красивые ролики снимать бессмысленно</a>
+          </h3>
+          <p class="text-sm">Denis Trusilo
+            <small>| Pocket Rocket</small>
+          </p>
+          <p class="text-sm">30min | RU
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">11:30</span><a href="speakers/george-kvasnikov.html">Креативность начинается с
+            незнания</a>
+          </h3>
+          <p class="text-sm">George Kvasnikov
+            <small>| Fantasy</small>
           </p>
           <p class="text-sm">30min | EN
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
-        </li>
-<!--        <li>-->
-<!--          <h3><span class="schedule-time">12:00</span><a href="#">TBD</a>-->
-<!--          </h3>-->
-<!--          <p class="text-sm">Speaker TBD-->
-<!--            <small>| Company</small></p>-->
-<!--          <p class="text-sm">30min | EN-->
-<!--            <span class="talk-place">Red Stage</span>-->
-<!--          </p>-->
-<!--        </li>-->
       </ul>
 
       <ul class="schedule first-day js-sat">
