--- a/app/speakers.html
+++ b/app/speakers.html
@@ -718,6 +718,31 @@
             </figcaption>
           </figure>
         </li>
+
+        <li>
+          <figure>
+            <img src="images/speakers/denis-trusilo.jpg" alt="Denis Trusilo photo">
+            <figcaption>
+              <span class="speaker-company">Pocket Rocket</span>
+              <h3><a href="speakers/denis-trusilo.html">Denis Trusilo</a></h3>
+              <p>
+                <small>Minsk, Belarus</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="images/speakers/george-kvasnikov.jpg" alt="George Kvasnikov photo">
+            <figcaption>
+              <span class="speaker-company">Fantasy</span>
+              <h3><a href="speakers/george-kvasnikov.html">George Kvasnikov</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
 
       <p class="padding-top-md"><a class="btn" target="_blank"
