add intro to mobile people day's page

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -133,22 +133,45 @@
   </nav>
 
   <section>
-    <div class="content-md announcement">
-      <h3>9 AUG 2019 </h3>
-      <h2 class="text-lg">Mobile People Day</h2>
-      <p class="text-center">
-        <a class="btn" href="schedule.html">See Schedule</a>
+    <h3>9 AUG 2019 </h3>
+    <h2 class="text-lg">Mobile People Day</h2>
+
+    <div class="content-md">
+      <p class="text-md">This year <strong>Mobile People community</strong> has joined The Rolling Scopes to arrange Mobile
+        People Day as part of the RS
+        Conf 2019.</p>
+    </div>
+    <div class="content-lg padding-top-md">
+      <p class="text-lg"><strong>Mobile People</strong> is a community of engineers who care, and who are in love with
+        mobile development
+        and testing! We used to meet with you at various meetups & tech talks, mobile conferences & broadcasting parties
+        – now it’s time to do something bigger!</p>
+    </div>
+    <div class="content-md">
+      <p class="text-md padding-top-md">So we will be happy to meet you on <strong>August 9</strong>, day dedicated to
+        Mobile engineering, technologies, and trends.
+        There will be a really good Speakers lineup , various activities and lot of fun.</p>
+    </div>
+    <div class="content-lg">
+      <p class="text-lg padding-top-md">What is expected from you?
+        –Just buy a ticket and join us!</p>
+      <p class="text-center padding-top-md">
+        <!--        <a class="btn" href="schedule.html">See Schedule</a>-->
         <a class="btn"
            href="https://imaguru.by/product/the-rolling-scopes-conference-2019-mobile-friday-ticket/">Buy
           a
           Ticket</a>
       </p>
+      <p class="text-lg padding-top-md">See you there!</p>
+
+
     </div>
   </section>
+
+
   <section>
     <div class="content-lg">
       <h2>Speakers</h2>
-
       <ul class="speaker-list">
         <li>
           <figure>
@@ -317,7 +340,173 @@
 
     </div>
   </section>
+  <section>
+    <div class="content-lg">
+      <h2>Schedule</h2>
+      <ul class="schedule mobile-people-day">
+        <li>
+          <h3><span class="schedule-time">9:00</span> Registration</h3>
+        </li>
+        <li>
+          <h3><span class="schedule-time">10:00</span> Opening. Welcome speech</h3>
+          <p class="text-sm">"Mobile People" Crew</p>
+          <p class="text-sm">10min | RU
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
 
+        <li>
+          <h3><span class="schedule-time">10:10</span> <a href="speakers/vladimir-ivanov.html"> Wake Up, Neo</a>
+          </h3>
+          <p class="text-sm">Vladimir Ivanov
+            <small>| EPAM</small>
+          </p>
+          <p class="text-sm">40min | EN
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+
+        <li class="first-stream">
+          <h3><span class="schedule-time">11:00</span><a href="speakers/yonatan-levin.html">TBD</a></h3>
+          <p class="text-sm">Yonatan Levin
+            <small>| monday.com</small>
+          </p>
+          <p class="text-sm">50min | EN
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">11:00</span><a href="speakers/muhammed-salih-guler.html">Animations in
+            Flutter</a>
+          </h3>
+          <p class="text-sm">Muhammed Salih Guler
+            <small>| Onefootball GmbH</small>
+          </p>
+          <p class="text-sm">50min | EN
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
+
+        <li class="first-stream">
+          <h3><span class="schedule-time">12:00</span><a href="speakers/alexander-blinov.html"> Молчание джунов</a></h3>
+          <p class="text-sm">Alexander Blinov
+            <small>| Headhunter</small>
+          </p>
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">12:00</span><a href="speakers/aleksandr-denisov.html">How to cook Flutter
+            correctly</a>
+          </h3>
+          <p class="text-sm">Aleksandr Denisov
+            <small>| EPAM</small>
+          </p>
+          <p class="text-sm">50min | EN
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
+
+        <li>
+          <h3><span class="schedule-time">13:00</span> Lunch break | 60min</h3>
+        </li>
+
+        <li class="first-stream">
+          <h3><span class="schedule-time">14:00</span><a href="speakers/elaine-dias-batista.html">Google Assistant for
+            Android developers</a>
+          </h3>
+          <p class="text-sm">Elaine Dias Batista
+            <small>| SFEIR</small>
+          </p>
+          <p class="text-sm">50min | EN
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">14:00</span><a href="speakers/anastasiia-voitova.html"> 10 lines of
+            encryption, 1500 lines of key management</a></h3>
+          <p class="text-sm">Anastasiia Voitova
+            <small>| Cossack Labs</small>
+          </p>
+          <p class="text-sm">50min | EN
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
+
+        <li class="first-stream">
+          <h3><span class="schedule-time">15:00</span><a href="speakers/pavel-strelchenko.html">Фантастические плагины и
+            где они обитают</a>
+          </h3>
+          <p class="text-sm">Pavel Strelchenko
+            <small>| Headhunter</small>
+          </p>
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">15:00</span>
+            <a href="speakers/danis-tazetdinov.html">Augmenting Reality</a>
+          </h3>
+          <p class="text-sm">Danis Tazetdinov
+            <small>| EPAM</small>
+          </p>
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
+
+        <li>
+          <h3><span class="schedule-time">15:50</span> Break | 30min</h3>
+        </li>
+
+        <li class="first-stream">
+          <h3><span class="schedule-time">16:20</span><a href="speakers/alexey-bykov.html">UX как область
+            ответственности мобильного разработчика</a>
+          </h3>
+          <p class="text-sm">Alexey Bykov
+            <small>| KasperskyLab</small>
+          </p>
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">16:20</span> <a href="speakers/dmitriy-movchan.html">Автотесты под Android -
+            так ли это просто?</a></h3>
+          <p class="text-sm">Dmitriy Movchan
+            <small>| KasperskyLab</small>
+          </p>
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
+
+        <li class="first-stream">
+          <h3><span class="schedule-time">17:20</span> <a href="speakers/mateusz-szklarek.html">MVVM as good
+            (anti)pattern in iOS</a>
+          </h3>
+          <p class="text-sm">Mateusz Szklarek
+            <small>| EL Passion</small>
+          </p>
+          <p class="text-sm">50min | EN
+            <span class="talk-place">Green Stage</span>
+          </p>
+        </li>
+        <li class="second-stream">
+          <h3><span class="schedule-time">17:20</span> <a href="speakers/max-nikulin.html">Строим видеоредактор для
+            iOS</a></h3>
+          <p class="text-sm">Max Nikulin
+            <small>| Movavi</small>
+          </p>
+          <p class="text-sm">50min | RU
+            <span class="talk-place">Blue Stage</span>
+          </p>
+        </li>
+      </ul>
+    </div>
+  </section>
   <section>
     <div class="content-lg">
       <h2>Venue</h2>
