add: two more speakers to design stream

--- a/app/speakers.html
+++ b/app/speakers.html
@@ -743,7 +743,32 @@
             </figcaption>
           </figure>
         </li>
+        <li>
+          <figure>
+            <img src="images/speakers/alexander-nelidkin.jpg" alt="Alexander Nelidkin photo">
+            <figcaption>
+              <span class="speaker-company">AIC</span>
+              <h3><a href="speakers/alexander-nelidkin.html">Alexander Nelidkin</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="images/speakers/sergey-kireev.jpg" alt="Sergey Kireev photo">
+            <figcaption>
+              <span class="speaker-company">AIC</span>
+              <h3><a href="speakers/sergey-kireev.html">Sergey Kireev</a></h3>
+              <p>
+                <small>Moscow, Russia</small>
+              </p>
+            </figcaption>
+          </figure>
+        </li>
       </ul>
+
 
       <p class="padding-top-md"><a class="btn" target="_blank"
                                    href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call
