--- a/app/schedule.html
+++ b/app/schedule.html
@@ -319,7 +319,8 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">17:40</span><a href="speakers/yonatan-levin.html">Architecture with Jetpack</a></h3>
+          <h3><span class="schedule-time">17:40</span><a href="speakers/yonatan-levin.html">Architecture with
+            Jetpack</a></h3>
           <p class="text-sm">Yonatan Levin
             <small>| monday.com</small>
           </p>
@@ -394,6 +395,28 @@
           </h3>
           <p class="text-sm">George Kvasnikov
             <small>| Fantasy</small>
+          </p>
+          <p class="text-sm">30min | EN
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">12:00</span><a href="speakers/sergey-kireev.html">Все дизайнеры —
+            популисты</a>
+          </h3>
+          <p class="text-sm">Sergey Kireev
+            <small>| AIC</small>
+          </p>
+          <p class="text-sm">30min | EN
+            <span class="talk-place">Red Stage</span>
+          </p>
+        </li>
+        <li>
+          <h3><span class="schedule-time">12:30</span><a href="speakers/alexander-nelidkin.html">Лучше стыдно, чем
+            никогда</a>
+          </h3>
+          <p class="text-sm">Alexander Nelidkin
+            <small>| AIC</small>
           </p>
           <p class="text-sm">30min | EN
             <span class="talk-place">Red Stage</span>
