add: andre's talk

--- a/app/schedule.html
+++ b/app/schedule.html
@@ -372,7 +372,7 @@
             разработка - не дизайном единым. (не) про дизайн, командную работу и справедливость</a>
           </h3>
           <p class="text-sm">Kseniya Koltun
-            <small>| FaceMetricsk</small>
+            <small>| FaceMetrics</small>
           </p>
           <p class="text-sm">30min | RU
             <span class="talk-place">Red Stage</span>
@@ -523,7 +523,8 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">13:20</span><a href="speakers/andre-gloukhmantchouk.html">TBD</a></h3>
+          <h3><span class="schedule-time">13:20</span><a href="speakers/andre-gloukhmantchouk.html">What's next for
+            cross platform mobile development?</a></h3>
           <p class="text-sm">Andre Gloukhmantchouk
             <small>| Google</small>
           </p>
