--- a/app/schedule.html
+++ b/app/schedule.html
@@ -319,8 +319,8 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">17:40</span><a href="speakers/yonatan-levin.html">Architecture with
-            Jetpack</a></h3>
+          <h3><span class="schedule-time">17:40</span><a href="speakers/yonatan-levin.html">Modern Android Development
+            in Production</a></h3>
           <p class="text-sm">Yonatan Levin
             <small>| monday.com</small>
           </p>
