upd: levin's talk in schedule

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -137,7 +137,8 @@
     <h2 class="text-lg">Mobile People Day</h2>
 
     <div class="content-md">
-      <p class="text-md">This year <strong>Mobile People community</strong> has joined The Rolling Scopes to arrange Mobile
+      <p class="text-md">This year <strong>Mobile People community</strong> has joined The Rolling Scopes to arrange
+        Mobile
         People Day as part of the RS
         Conf 2019.</p>
     </div>
@@ -511,7 +512,8 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">17:40</span><a href="speakers/yonatan-levin.html">Architecture with Jetpack</a></h3>
+          <h3><span class="schedule-time">17:40</span><a href="speakers/yonatan-levin.html">Modern Android Development
+            in Production</a></h3>
           <p class="text-sm">Yonatan Levin
             <small>| monday.com</small>
           </p>
