--- a/app/schedule.html
+++ b/app/schedule.html
@@ -458,12 +458,16 @@
           </p>
         </li>
         <li class="third-stream">
-          <h3><span class="schedule-time">11:00</span>Panel Discussion</h3>
-          <p class="text-sm"></p>
+          <h3><span class="schedule-time">15:30</span><a href="speakers/sergey-shalyapin.html">What's wrong with classic
+            education?!</a></h3>
+          <p class="text-sm">Sergey Shalyapin
+            <small>| Oxagile</small>
+          </p>
           <p class="text-sm">30min | EN
             <span class="talk-place">Blue Stage</span>
           </p>
         </li>
+
         <li class="first-stream">
           <h3><span class="schedule-time">11:40</span><a href="speakers/madlaina-kalunder.html">Beyond Flatland - the
             rise of 3D user interfaces</a></h3>
@@ -496,12 +500,12 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">12:40</span><a href="speakers/scott-feinberg.html">Move Beyond Functions:
-            Simple, Robust App Hosting with KNative and Google Cloud Run</a></h3>
-          <p class="text-sm">Scott Feinberg
-            <small>| Google</small>
+          <h3><span class="schedule-time">12:40</span><a href="speakers/ilya-pukhalski.html">Your Job Sucks And This Is
+            Why</a></h3>
+          <p class="text-sm">Ilya Pukhalski
+            <small>| EPAM</small>
           </p>
-          <p class="text-sm">30min | EN
+          <p class="text-sm">30min | RU
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
@@ -526,9 +530,9 @@
           <h3><span class="schedule-time">13:20</span><a href="speakers/andre-gloukhmantchouk.html">What's next for
             cross platform mobile development?</a></h3>
           <p class="text-sm">Andre Gloukhmantchouk
-            <small>| Google</small>
+            <small>| Facebook</small>
           </p>
-          <p class="text-sm">40min | EN
+          <p class="text-sm">40min | RU
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
@@ -562,10 +566,10 @@
           </p>
         </li>
         <li class="second-stream">
-          <h3><span class="schedule-time">15:30</span><a href="speakers/sergey-shalyapin.html">What's wrong with classic
-            education?!</a></h3>
-          <p class="text-sm">Sergey Shalyapin
-            <small>| Oxagile</small>
+          <h3><span class="schedule-time">12:40</span><a href="speakers/scott-feinberg.html">Move Beyond Functions:
+            Simple, Robust App Hosting with KNative and Google Cloud Run</a></h3>
+          <p class="text-sm">Scott Feinberg
+            <small>| Google</small>
           </p>
           <p class="text-sm">30min | EN
             <span class="talk-place">Green Stage</span>
@@ -702,7 +706,7 @@
           <p class="text-sm">Vladik Khononov
             <small>| Invesus Group</small>
           </p>
-          <p class="text-sm">40min | EN
+          <p class="text-sm">40min | RU
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
