--- a/app/speakers.html
+++ b/app/speakers.html
@@ -285,7 +285,7 @@
           <figure>
             <img src="images/speakers/andre-gloukhmantchouk.jpg" alt="Andre Gloukhmantchouk photo">
             <figcaption>
-              <span class="speaker-company">Google</span>
+              <span class="speaker-company">Facebook</span>
               <h3><a href="speakers/andre-gloukhmantchouk.html">Andre Gloukhmantchouk</a></h3>
               <p>
                 <small>Los Angeles, United States</small>
