--- a/app/speakers.html
+++ b/app/speakers.html
@@ -719,54 +719,54 @@
           </figure>
         </li>
 
-        <li>
-          <figure>
-            <img src="images/speakers/denis-trusilo.jpg" alt="Denis Trusilo photo">
-            <figcaption>
-              <span class="speaker-company">Pocket Rocket</span>
-              <h3><a href="speakers/denis-trusilo.html">Denis Trusilo</a></h3>
-              <p>
-                <small>Minsk, Belarus</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-        <li>
-          <figure>
-            <img src="images/speakers/george-kvasnikov.jpg" alt="George Kvasnikov photo">
-            <figcaption>
-              <span class="speaker-company">Fantasy</span>
-              <h3><a href="speakers/george-kvasnikov.html">George Kvasnikov</a></h3>
-              <p>
-                <small>Moscow, Russia</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-        <li>
-          <figure>
-            <img src="images/speakers/alexander-nelidkin.jpg" alt="Alexander Nelidkin photo">
-            <figcaption>
-              <span class="speaker-company">AIC</span>
-              <h3><a href="speakers/alexander-nelidkin.html">Alexander Nelidkin</a></h3>
-              <p>
-                <small>Moscow, Russia</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
-        <li>
-          <figure>
-            <img src="images/speakers/sergey-kireev.jpg" alt="Sergey Kireev photo">
-            <figcaption>
-              <span class="speaker-company">AIC</span>
-              <h3><a href="speakers/sergey-kireev.html">Sergey Kireev</a></h3>
-              <p>
-                <small>Moscow, Russia</small>
-              </p>
-            </figcaption>
-          </figure>
-        </li>
+<!--        <li>-->
+<!--          <figure>-->
+<!--            <img src="images/speakers/denis-trusilo.jpg" alt="Denis Trusilo photo">-->
+<!--            <figcaption>-->
+<!--              <span class="speaker-company">Pocket Rocket</span>-->
+<!--              <h3><a href="speakers/denis-trusilo.html">Denis Trusilo</a></h3>-->
+<!--              <p>-->
+<!--                <small>Minsk, Belarus</small>-->
+<!--              </p>-->
+<!--            </figcaption>-->
+<!--          </figure>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <figure>-->
+<!--            <img src="images/speakers/george-kvasnikov.jpg" alt="George Kvasnikov photo">-->
+<!--            <figcaption>-->
+<!--              <span class="speaker-company">Fantasy</span>-->
+<!--              <h3><a href="speakers/george-kvasnikov.html">George Kvasnikov</a></h3>-->
+<!--              <p>-->
+<!--                <small>New York, United States</small>-->
+<!--              </p>-->
+<!--            </figcaption>-->
+<!--          </figure>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <figure>-->
+<!--            <img src="images/speakers/alexander-nelidkin.jpg" alt="Alexander Nelidkin photo">-->
+<!--            <figcaption>-->
+<!--              <span class="speaker-company">AIC</span>-->
+<!--              <h3><a href="speakers/alexander-nelidkin.html">Alexander Nelidkin</a></h3>-->
+<!--              <p>-->
+<!--                <small>Moscow, Russia</small>-->
+<!--              </p>-->
+<!--            </figcaption>-->
+<!--          </figure>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <figure>-->
+<!--            <img src="images/speakers/sergey-kireev.jpg" alt="Sergey Kireev photo">-->
+<!--            <figcaption>-->
+<!--              <span class="speaker-company">AIC</span>-->
+<!--              <h3><a href="speakers/sergey-kireev.html">Sergey Kireev</a></h3>-->
+<!--              <p>-->
+<!--                <small>Moscow, Russia</small>-->
+<!--              </p>-->
+<!--            </figcaption>-->
+<!--          </figure>-->
+<!--        </li>-->
       </ul>
     </div>
   </section>
