upd bykov's company; add knysh's talk desc

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -279,7 +279,7 @@
           <figure>
             <img src="images/speakers/alexey-bykov.jpg" alt="Alexey Bykov photo">
             <figcaption>
-              <span class="speaker-company">KasperskyLab</span>
+              <span class="speaker-company">Revolut</span>
               <h3><a href="speakers/alexey-bykov.html">Alexey Bykov</a></h3>
               <p>
                 <small>Moscow, Russia</small>
