--- a/app/schedule.html
+++ b/app/schedule.html
@@ -295,7 +295,7 @@
             ответственности мобильного разработчика</a>
           </h3>
           <p class="text-sm">Alexey Bykov
-            <small>| KasperskyLab</small>
+            <small>| Revolut</small>
           </p>
           <p class="text-sm">50min | RU
             <span class="talk-place">Green Stage</span>
@@ -748,7 +748,7 @@
           <p class="text-sm">Kirill Knysh
             <small>| Uber</small>
           </p>
-          <p class="text-sm">30min | RU
+          <p class="text-sm">30min | EN
             <span class="talk-place">Green Stage</span>
           </p>
         </li>
