add mobile people talks to info partners

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -670,6 +670,11 @@
             <img src="images/partners/logo-js-kitchen.png" alt="JavaScript Kitchen logo"/>
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://soundcloud.com/mobilepeopletalks">
+            <img src="images/partners/logo-MobilePeopleTalks.png" alt="Mobile People Talks logo"/>
+          </a>
+        </li>
       </ul>
 
       <p>
