upd: elaina's talk, add onliner & android broadcast to info partbers

--- a/app/index.html
+++ b/app/index.html
@@ -610,6 +610,11 @@
           </a>
         </li>
         <li>
+          <a target="_blank" href="https://www.onliner.by/">
+            <img src="images/partners/logo-onliner.png" alt="onliner logo"/>
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://vk.com/jsmachine">
             <img src="images/partners/logo-jsmachine.png" alt="JS Machine logo"/>
           </a>
@@ -622,6 +627,11 @@
         <li>
           <a target="_blank" href="https://soundcloud.com/mobilepeopletalks">
             <img src="images/partners/logo-MobilePeopleTalks.png" alt="Mobile People Talks logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://t.me/android_broadcast">
+            <img src="images/partners/logo-Android-Broadcast.png" alt="Android Broadcast logo"/>
           </a>
         </li>
       </ul>
