--- a/app/schedule.html
+++ b/app/schedule.html
@@ -139,9 +139,9 @@
         <a data-day="mobile-people-day" href="#mobile-people-day" class="btn rounded"><span
           class="full-view">Mobile People Day</span><span class="abbr-view">MBL</span>
           <span class="stream-date">9 Aug</span></a>
-<!--        <a data-day="design-friday" href="#design-friday" class="btn rounded"><span-->
-<!--          class="full-view">Design Friday</span>-->
-<!--          <span class="abbr-view">DSGN</span> <span class="stream-date">9 Aug</span></a>-->
+        <!--        <a data-day="design-friday" href="#design-friday" class="btn rounded"><span-->
+        <!--          class="full-view">Design Friday</span>-->
+        <!--          <span class="abbr-view">DSGN</span> <span class="stream-date">9 Aug</span></a>-->
         <a data-day="js-sat" href="#js-sat" class="btn rounded"><span class="full-view">JS/Frontend</span><span
           class="abbr-view">JS/FE</span>
           <span class="stream-date">10 Aug</span></a>
@@ -235,8 +235,8 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">14:10</span><a href="speakers/elaine-dias-batista.html">Google Assistant for
-            Android developers</a>
+          <h3><span class="schedule-time">14:10</span><a href="speakers/elaine-dias-batista.html">Building Voice-First
+            Android Apps</a>
           </h3>
           <p class="text-sm">Elaine Dias Batista
             <small>| SFEIR</small>
@@ -354,75 +354,75 @@
         </li>
       </ul>
 
-<!--      <ul class="schedule design-friday">-->
-<!--        <li>-->
-<!--          <h3><span class="schedule-time">9:00</span> Registration</h3>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <h3><span class="schedule-time">10:00</span> Opening. Welcome speech from conference-->
-<!--            organizers-->
-<!--          </h3>-->
-<!--          <p class="text-sm">DesignSpot Crew</p>-->
-<!--          <p class="text-sm">30min | RU-->
-<!--            <span class="talk-place">Red Stage</span>-->
-<!--          </p>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <h3><span class="schedule-time">10:30</span><a href="speakers/kseniya-koltun.html">Продуктовая мобильная-->
-<!--            разработка - не дизайном единым. (не) про дизайн, командную работу и справедливость</a>-->
-<!--          </h3>-->
-<!--          <p class="text-sm">Kseniya Koltun-->
-<!--            <small>| FaceMetrics</small>-->
-<!--          </p>-->
-<!--          <p class="text-sm">30min | RU-->
-<!--            <span class="talk-place">Red Stage</span>-->
-<!--          </p>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <h3><span class="schedule-time">11:00</span><a href="speakers/denis-trusilo.html">Видеопродакшен без-->
-<!--            комплексов: Почему красивые ролики снимать бессмысленно</a>-->
-<!--          </h3>-->
-<!--          <p class="text-sm">Denis Trusilo-->
-<!--            <small>| Pocket Rocket</small>-->
-<!--          </p>-->
-<!--          <p class="text-sm">30min | RU-->
-<!--            <span class="talk-place">Red Stage</span>-->
-<!--          </p>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <h3><span class="schedule-time">11:30</span><a href="speakers/george-kvasnikov.html">Креативность начинается с-->
-<!--            незнания</a>-->
-<!--          </h3>-->
-<!--          <p class="text-sm">George Kvasnikov-->
-<!--            <small>| Fantasy</small>-->
-<!--          </p>-->
-<!--          <p class="text-sm">30min | EN-->
-<!--            <span class="talk-place">Red Stage</span>-->
-<!--          </p>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <h3><span class="schedule-time">12:00</span><a href="speakers/sergey-kireev.html">Все дизайнеры —-->
-<!--            популисты</a>-->
-<!--          </h3>-->
-<!--          <p class="text-sm">Sergey Kireev-->
-<!--            <small>| AIC</small>-->
-<!--          </p>-->
-<!--          <p class="text-sm">30min | EN-->
-<!--            <span class="talk-place">Red Stage</span>-->
-<!--          </p>-->
-<!--        </li>-->
-<!--        <li>-->
-<!--          <h3><span class="schedule-time">12:30</span><a href="speakers/alexander-nelidkin.html">Лучше стыдно, чем-->
-<!--            никогда</a>-->
-<!--          </h3>-->
-<!--          <p class="text-sm">Alexander Nelidkin-->
-<!--            <small>| AIC</small>-->
-<!--          </p>-->
-<!--          <p class="text-sm">30min | EN-->
-<!--            <span class="talk-place">Red Stage</span>-->
-<!--          </p>-->
-<!--        </li>-->
-<!--      </ul>-->
+      <!--      <ul class="schedule design-friday">-->
+      <!--        <li>-->
+      <!--          <h3><span class="schedule-time">9:00</span> Registration</h3>-->
+      <!--        </li>-->
+      <!--        <li>-->
+      <!--          <h3><span class="schedule-time">10:00</span> Opening. Welcome speech from conference-->
+      <!--            organizers-->
+      <!--          </h3>-->
+      <!--          <p class="text-sm">DesignSpot Crew</p>-->
+      <!--          <p class="text-sm">30min | RU-->
+      <!--            <span class="talk-place">Red Stage</span>-->
+      <!--          </p>-->
+      <!--        </li>-->
+      <!--        <li>-->
+      <!--          <h3><span class="schedule-time">10:30</span><a href="speakers/kseniya-koltun.html">Продуктовая мобильная-->
+      <!--            разработка - не дизайном единым. (не) про дизайн, командную работу и справедливость</a>-->
+      <!--          </h3>-->
+      <!--          <p class="text-sm">Kseniya Koltun-->
+      <!--            <small>| FaceMetrics</small>-->
+      <!--          </p>-->
+      <!--          <p class="text-sm">30min | RU-->
+      <!--            <span class="talk-place">Red Stage</span>-->
+      <!--          </p>-->
+      <!--        </li>-->
+      <!--        <li>-->
+      <!--          <h3><span class="schedule-time">11:00</span><a href="speakers/denis-trusilo.html">Видеопродакшен без-->
+      <!--            комплексов: Почему красивые ролики снимать бессмысленно</a>-->
+      <!--          </h3>-->
+      <!--          <p class="text-sm">Denis Trusilo-->
+      <!--            <small>| Pocket Rocket</small>-->
+      <!--          </p>-->
+      <!--          <p class="text-sm">30min | RU-->
+      <!--            <span class="talk-place">Red Stage</span>-->
+      <!--          </p>-->
+      <!--        </li>-->
+      <!--        <li>-->
+      <!--          <h3><span class="schedule-time">11:30</span><a href="speakers/george-kvasnikov.html">Креативность начинается с-->
+      <!--            незнания</a>-->
+      <!--          </h3>-->
+      <!--          <p class="text-sm">George Kvasnikov-->
+      <!--            <small>| Fantasy</small>-->
+      <!--          </p>-->
+      <!--          <p class="text-sm">30min | EN-->
+      <!--            <span class="talk-place">Red Stage</span>-->
+      <!--          </p>-->
+      <!--        </li>-->
+      <!--        <li>-->
+      <!--          <h3><span class="schedule-time">12:00</span><a href="speakers/sergey-kireev.html">Все дизайнеры —-->
+      <!--            популисты</a>-->
+      <!--          </h3>-->
+      <!--          <p class="text-sm">Sergey Kireev-->
+      <!--            <small>| AIC</small>-->
+      <!--          </p>-->
+      <!--          <p class="text-sm">30min | EN-->
+      <!--            <span class="talk-place">Red Stage</span>-->
+      <!--          </p>-->
+      <!--        </li>-->
+      <!--        <li>-->
+      <!--          <h3><span class="schedule-time">12:30</span><a href="speakers/alexander-nelidkin.html">Лучше стыдно, чем-->
+      <!--            никогда</a>-->
+      <!--          </h3>-->
+      <!--          <p class="text-sm">Alexander Nelidkin-->
+      <!--            <small>| AIC</small>-->
+      <!--          </p>-->
+      <!--          <p class="text-sm">30min | EN-->
+      <!--            <span class="talk-place">Red Stage</span>-->
+      <!--          </p>-->
+      <!--        </li>-->
+      <!--      </ul>-->
 
       <ul class="schedule first-day js-sat">
         <li>
