--- a/app/mobile.html
+++ b/app/mobile.html
@@ -428,8 +428,8 @@
         </li>
 
         <li class="first-stream">
-          <h3><span class="schedule-time">14:10</span><a href="speakers/elaine-dias-batista.html">Google Assistant for
-            Android developers</a>
+          <h3><span class="schedule-time">14:10</span><a href="speakers/elaine-dias-batista.html">Building Voice-First
+            Android Apps</a>
           </h3>
           <p class="text-sm">Elaine Dias Batista
             <small>| SFEIR</small>
@@ -661,6 +661,11 @@
           </a>
         </li>
         <li>
+          <a target="_blank" href="https://www.onliner.by/">
+            <img src="images/partners/logo-onliner.png" alt="onliner logo"/>
+          </a>
+        </li>
+        <li>
           <a target="_blank" href="https://vk.com/jsmachine">
             <img src="images/partners/logo-jsmachine.png" alt="JS Machine logo"/>
           </a>
@@ -673,6 +678,11 @@
         <li>
           <a target="_blank" href="https://soundcloud.com/mobilepeopletalks">
             <img src="images/partners/logo-MobilePeopleTalks.png" alt="Mobile People Talks logo"/>
+          </a>
+        </li>
+        <li>
+          <a target="_blank" href="https://t.me/android_broadcast">
+            <img src="images/partners/logo-Android-Broadcast.png" alt="Android Broadcast logo"/>
           </a>
         </li>
       </ul>
