--- a/app/schedule.html
+++ b/app/schedule.html
@@ -798,7 +798,7 @@
           <p class="text-sm">Дима Королёв
             <small>| Tinkoff</small>
           </p>
-          <p class="text-sm">30min | EN
+          <p class="text-sm">30min | RU
             <span class="talk-place">Red Stage</span>
           </p>
         </li>
