add: itvdn to info partner

--- a/app/partners.html
+++ b/app/partners.html
@@ -244,6 +244,11 @@
             <img src="images/partners/logo-Android-Broadcast.png" alt="Android Broadcast logo"/>
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://itvdn.com/ru">
+            <img src="images/partners/logo-ITVDN.svg" alt="ITVDN logo"/>
+          </a>
+        </li>
       </ul>
 
       <p>
