--- a/app/mobile.html
+++ b/app/mobile.html
@@ -690,6 +690,11 @@
             <img src="images/partners/logo-ITVDN.svg" alt="ITVDN logo"/>
           </a>
         </li>
+        <li>
+          <a target="_blank" href="https://www.kv.by/">
+            <img src="images/partners/logo-kvby.svg" alt="kv.by logo"/>
+          </a>
+        </li>
       </ul>
 
       <p>
