add: epam to parters

--- a/app/index.html
+++ b/app/index.html
@@ -139,9 +139,9 @@
       <h1>The Rolling Scopes <br> Conference</h1>
       <p class="bold text-md">Minsk, 9-11 August 2019</p>
       <p>
-<!--        <a class="btn" target="_blank"-->
-<!--           href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call-->
-<!--          for Speakers</a>-->
+        <!--        <a class="btn" target="_blank"-->
+        <!--           href="https://docs.google.com/forms/d/e/1FAIpQLSe1Mx_HLnAm09pB0ngzx_eCBJg29mzUdM0dLfE2BfhjdaCy6A/viewform">Call-->
+        <!--          for Speakers</a>-->
         <a class="btn" href="schedule.html">See Schedule</a>
         <a target="_blank" class="btn" href="rsconf19_PARTNERSHIP.pdf">Become a partner</a>
       </p>
@@ -186,7 +186,8 @@
             <h3>"JavaScript / Front-end Weekend" Ticket</h3>
             <p>Access to JavaScript/Front-end streams during the weekend, tightly wrapped by The Rolling Scopes.</p>
             <p class="text-center"><a target="_blank" class="btn"
-                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-javascript-front-end-weekend/">120 BYN</a>
+                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-javascript-front-end-weekend/">120
+              BYN</a>
             </p>
           </div>
         </div>
@@ -202,7 +203,8 @@
               Access to mobile streams, mastered by the MobilePeople community.
             </p>
             <p class="text-center"><a target="_blank" class="btn"
-                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-mobile-friday-ticket/">60 BYN</a>
+                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-mobile-friday-ticket/">60
+              BYN</a>
             </p>
           </div>
         </div>
@@ -217,7 +219,8 @@
             <p>Access to design stream, carefully baked by the DesignSpot community.
             </p>
             <p class="text-center"><a target="_blank" class="btn"
-                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-design-friday-ticket/">60 BYN</a>
+                                      href="https://imaguru.by/product/the-rolling-scopes-conference-2019-design-friday-ticket/">60
+              BYN</a>
             </p>
           </div>
         </div>
@@ -539,6 +542,14 @@
         <li>
           <a target="_blank" href="http://imaguru.co">
             <img src="images/partners/logo-imaguru.svg" alt="imaguru logo"/></a>
+        </li>
+      </ul>
+      <h2>Partners</h2>
+      <ul class="partner-list starred-list">
+        <li>
+          <a class="partner-diamond" target="_blank" href="http://www.epam.by/">
+            <img src="images/partners/logo-epam.svg" alt="epam logo"/>
+          </a>
         </li>
       </ul>
 
