--- a/app/partners.html
+++ b/app/partners.html
@@ -151,7 +151,14 @@
             <img src="images/partners/logo-imaguru.svg" alt="imaguru logo"/></a>
         </li>
       </ul>
-
+      <h2>Partners</h2>
+      <ul class="partner-list starred-list">
+        <li>
+          <a class="partner-diamond" target="_blank" href="http://www.epam.by/">
+            <img src="images/partners/logo-epam.svg" alt="epam logo"/>
+          </a>
+        </li>
+      </ul>
       <h2>Travel Partners</h2>
       <ul class="partner-list">
         <li>
