add: two more partners

--- a/app/mobile.html
+++ b/app/mobile.html
@@ -600,6 +600,16 @@
             <img src="images/partners/logo-epam.svg" alt="epam logo"/>
           </a>
         </li>
+        <li>
+          <a class="partner-gold" target="_blank" href="https://www.evolutiongaming.com/">
+            <img src="images/partners/logo-evolution-gaming.svg" alt="evolution gaming logo"/>
+          </a>
+        </li>
+        <li>
+          <a class="partner-bronze" target="_blank" href="https://www.datarobot.com">
+            <img src="images/partners/logo-datarobot.svg" alt="datarobot logo"/>
+          </a>
+        </li>
       </ul>
       <h2>Travel Partners</h2>
       <ul class="partner-list">
